# pdf-diff

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  deploy-web.yml  release.yml
docs/: GITHUB_PAGES_CHECKLIST.md  SELL_FLOW.md  WEB_FIRST.md
scripts/: copy-pdfjs-assets.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CommissionFooter.tsx  DownloadPromo.tsx  HomeScreen.tsx  PdfPageViewer.tsx  WebAppLink.tsx
src/lib/: contact.ts  diffPages.ts  distribution.ts  exportCsv.ts  license.ts  loadPdf.ts  pageAlign.ts  pdfExtract.ts  pdfImageDetect.ts  pdfSearch.ts  pdfSetup.ts  storage.ts  textMeasure.ts  textNormalize.ts  tier.ts  types.ts
