[package]
name = "pdf-diff"
version = "0.1.0"
description = "PDF diff viewer"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_diff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
